<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.smileyquiz.MainActivity">

        <ImageView
            android:id="@+id/smiley_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/s1" />

        <TextView
            android:id="@+id/question_text"
            style="@style/textStyle"
            android:text="@string/question" />

        <LinearLayout
            android:id="@+id/block_question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/question1_answer1"
                style="@style/buttonStyle"
                android:onClick="question1"
                android:tag="@string/smiley_angry"
                android:text="@string/smiley_angry" />

            <Button
                android:id="@+id/question1_answer2"
                style="@style/buttonStyle"
                android:onClick="question1"
                android:tag="@string/smiley_happy"
                android:text="@string/smiley_happy" />

            <Button
                android:id="@+id/question1_answer3"
                style="@style/buttonStyle"
                android:onClick="question1"
                android:tag="@string/smiley_sad"
                android:text="@string/smiley_sad" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/block_question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/question2_answer1"
                style="@style/checkboxStyle"
                android:text="@string/smiley_crying" />

            <CheckBox
                android:id="@+id/question2_answer2"
                style="@style/checkboxStyle"
                android:text="@string/smiley_curious" />

            <CheckBox
                android:id="@+id/question2_answer3"
                style="@style/checkboxStyle"
                android:text="@string/smiley_sad" />

            <Button
                android:id="@+id/next1"
                style="@style/nextButtonStyle"
                android:onClick="question2"
                android:text="@string/next" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/block_question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/question3_typed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:hint="@string/answer"
                android:inputType="textCapWords" />

            <Button
                android:id="@+id/next2"
                style="@style/nextButtonStyle"
                android:layout_marginTop="16sp"
                android:onClick="question3"
                android:text="@string/next" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/block_question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/question4_answer1"
                style="@style/radioButtonStyle"
                android:text="@string/smiley_bored" />

            <RadioButton
                android:id="@+id/question4_answer2"
                style="@style/radioButtonStyle"
                android:text="@string/smiley_surprised" />

            <RadioButton
                android:id="@+id/question4_answer3"
                style="@style/radioButtonStyle"
                android:text="@string/smiley_shy" />

            <Button
                android:id="@+id/next3"
                style="@style/nextButtonStyle"
                android:layout_marginTop="16sp"
                android:onClick="question4"
                android:text="@string/next" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/block_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/textStyle"
                android:text="@string/score" />

            <Button
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="showScore"
                android:paddingBottom="24dp"
                android:paddingTop="24dp"
                android:text="@string/show_score"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>